##version 0.0.1
	create terminal web.
	create modules core basics
