@@ -1,4 +1,6 @@
 ##version 0.0.1
-	create terminal web.
-	create modules core basics
+	create web.
+	create terminal.
+	create core basics.
+	create readme and examples.
 
